# terrain_toolkit_gRPC

./: .gitignore  README.md  package-lock.json  start.sh
grpc/cpp/code_simplification_manu/: CMakeLists.txt  critical.cpp  critical.h  off2graph.cpp  test.cpp
grpc/cpp/geodesic/: SE.txt  example  example0.cpp  example1.cpp  geo_playground.cpp  geodesic_algorithm_base.h  geodesic_algorithm_exact.h  geodesic_algorithm_exact_elements.h  geodesic_algorithm_graph_base.h  geodesic_constants_and_simple_functions.h  geodesic_mesh.h  geodesic_mesh_elements.h  main  main.cpp  play  playground  playground.cpp
grpc/cpp/grpc/: Makefile  geodesic_client.cc  geodesic_server_bak.cc
grpc/cpp/grpc_server/: CMakeLists.txt  geodesic_client.cc  geodesic_server.cc
grpc/node/: package-lock.json
grpc/node/dynamic_codegen/: geodesic_client.js
grpc/protos/: geodesic.proto
node/: package-lock.json  package.json
node/grpc_client/: geodesic_client.js
node/threejs/src/: objLoader.js  offLoader.js  off_loader.html  off_loader_2.html  off_loader_3.html  playground.html  playground.js  plyLoader.js  terrain_toolkit.html  webgl_loader_obj.html
node/threejs/src/models/off/: large_terrain.off
three.js-r102/: package-lock.json  package.json
three.js-r102/src/: off_loader.html  path.txt  playground.html  terrain_toolkit.html
